# raptor

./: .gitignore  .gitmodules  README.md  return_codes.md  return_codes.txt
old_code/: talker_node.cpp
src/force_sensor/: CMakeLists.txt  package.xml
src/force_sensor/U3/: u3Stream.c  u3Streamer.cpp  u3Streamer.h
src/force_sensor/config/: FT7724.cal  params.yaml
src/force_sensor/src/: ftconverter.cpp  ftconverter.h  readLabJack.cpp  readSerial.py  visualize.py
src/gripper_control/: CMakeLists.txt  package.xml
src/gripper_control/arduino_files/gripper_raptor/: gripper_raptor.ino
src/gripper_control/include/gripper_control/: gripper_control.hpp
src/gripper_control/src/: gripper_control.cpp  gripper_control_app.cpp
src/gripper_interface/: CMakeLists.txt  package.xml
src/gripper_interface/arduino_files/gripper_raptor/: gripper_raptor.ino
src/gripper_interface/arduino_files/gripper_raptor/gripper_raptor/: gripper_raptor.ino
src/gripper_interface/src/: gripper_interface.cpp
src/mission_control/: CMakeLists.txt  package.xml
src/mission_control/include/mission_control/: mission_control.hpp
src/mission_control/src/: mission_control.cpp  mission_control_app.cpp
src/mission_control/src/actions/: acc_test.cpp  arm.cpp  go_to_pos.cpp  set_gripper.cpp  takeoff.cpp
src/mission_control/src/missions/: acceleration_test.cpp  grasp.cpp  gripper_test.cpp  square.cpp  swoop.cpp  takeoff_test.cpp
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/launch/: detection_node.launch
src/object_detection/src/: compression_node.py  detection.py  pointcloud.py  streamer_receiver.py  streamer_sender.py
src/quad_actions/: CMakeLists.txt  package.xml
src/quad_actions/include/: quad.hpp
src/quad_actions/src/: mav_interface.cpp
src/quad_control/: CMakeLists.txt  package.xml
src/quad_control/include/: quad.hpp
src/quad_control/include/quad_control/: mavsdk_wrapper.hpp  quad.hpp  quad_control.hpp  quad_state.hpp
src/quad_control/src/: mavsdk_wrapper.cpp  quad.cpp  quad_control.cpp  quad_control_app.cpp  reference_generator.cpp
src/quad_control/src/actions/: acc_test.cpp  goToPos.cpp  hover_acc.cpp  takeoff.cpp
src/quad_control/src/apps/: pose_transformer.cpp
src/quad_control/src/quad/: quad.cpp
src/quad_control/src/wrappers/: mavsdk_wrapper.cpp
src/quad_interface/: CMakeLists.txt  package.xml
src/quad_interface/include/: quad.hpp
src/quad_interface/include/mavsdk/: mavsdk_helper.h
src/quad_interface/src/: mav_interface.cpp  quad.cpp  reference_generator.cpp  service_arm.cpp
src/raptor_interface/: CMakeLists.txt  package.xml
src/raptor_interface/action/: AccTest.action  GoToPos.action  Takeoff.action
src/raptor_interface/src/: mav_interface.cpp  service_arm.cpp  talker_node.cpp
src/raptor_interface/srv/: GoToPos.srv  SetGripper.srv  SetGripperAngle.srv  SetServo.srv
src/spectacular_vio/: package.xml  setup.py
src/spectacular_vio/launch/: spectacular_node.launch.py
src/spectacular_vio/spectacular_vio/: spectacular_node.py
src/vicon/: CMakeLists.txt  package.xml
src/vicon/src/: kimera_pose_transformer.cpp  kimera_px4_transmitter.cpp  px4_publisher.cpp  vicon_publisher.cpp  vicon_px4_publisher.cpp
src/vicon/vicon_datastream/: CMakeLists.txt
src/vicon_interface/: CMakeLists.txt  package.xml
src/vicon_interface/src/: vicon_interface.cpp
src/vio_bridge/: package.xml  setup.cfg  setup.py
src/vio_bridge/vio_bridge/: vio_bridge.py
vicon_interface/: CMakeLists.txt  package.xml
